<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/layout_header"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/title"
                    android:textSize="50dp"
                    android:textColor="@color/pink"/>

        </LinearLayout>

        <RelativeLayout
                android:id="@+id/control_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:layout_marginBottom="1dp">

            <ToggleButton
                    android:id="@+id/allselect_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/toggle_design"
                    style="@style/toggleButton"/>

            <EditText
                    android:id="@+id/input_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint"
                    android:layout_toRightOf="@id/allselect_toggle"/>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"/>

        <LinearLayout
                android:id="@+id/hooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                <TextView
                        android:id="@+id/item_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="test"/>

                <Button
                        android:id="@+id/clear_completed_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/clear_completed_button_design"
                        style="@style/clearCompletedButton"
                        android:text="clear completed"/>

            </RelativeLayout>

            <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                <RadioButton
                        android:id="@+id/radio_button_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/radio_design"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/radio_all"
                        android:button="@null"
                        android:gravity="center"
                        android:checked="true">
                </RadioButton>

                <RadioButton
                        android:id="@+id/radio_button_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/radio_design"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/radio_active"
                        android:button="@null"
                        android:gravity="center">
                </RadioButton>

                <RadioButton
                        android:id="@+id/radio_button_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/radio_design"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/radio_completed"
                        android:button="@null"
                        android:gravity="center">
                </RadioButton>

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
